--- a/public/index.html
+++ b/public/index.html
@@ -53,5 +53,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- FontAwesome -->
+    <script
+      src="https://kit.fontawesome.com/95ec25044e.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
